--- a/index.html
+++ b/index.html
@@ -4,24 +4,15 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
-   <style type="text/css" rel="style" > 
-   div{
-      width: 150px;
-      height: 150px;
-      background-color: coral;
-   }
-   .red-bg{background-color: red;
-   }
-   .blue-bg{
-      background-color: blue;
-   }
-   #first-div {
-      background-color: yellow;
-   }
-      </style>
+   <link rel="stylesheet" href="./css/main.css">
 
 </head>
 <body>
+   <p class="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non iusto, tenetur</p>  
+
+   <div style="font-size: 2em;">
+
+   </div>
    <div id="first-div" >
      some text 1
    </div>
